ndarray nearly gone

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ numpy = "0.21.0"
 rayon = "1.5"
 ndarray = { version = "0.15", features = ["rayon"] }
 ndarray-parallel = "0.9.1"
-ndarray-linalg = { version = "0.16", features = ["intel-mkl-system"] }
+faer = "0.16"
 
 [profile.release]
 opt-level = 3
