--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ numpy = "0.21.0"
 rayon = "1.5"
 ndarray = { version = "0.15", features = ["rayon"] }
 ndarray-parallel = "0.9.1"
-faer = "0.16"
+faer = { version = "0.18", features = ["std"] }
+
 
 [profile.release]
 opt-level = 3
